--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
   <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon.ico/android-chrome192x192.png">
 </head>
 <body>
-    
+  <!--Header-->
+  <header>Header</header>
+
+  <!--Main content-->
+  <main>Main Content</main>
+
+  <!--Footer-->
+  <footer>Footer</footer>
+  
+
 </body>
 </html>
