--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon.ico/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="512x512" href="assets/favicon.ico/android-chrome-512x512.png">
   <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon.ico/android-chrome192x192.png">
+  <!--Stylesheet-->
+  <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 <body>
   <!--Header-->
