--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
 <body>
   <!--Header-->
   <header>
-    <a href="index.html"
-    <h1 id="logo">Love Running</h1>
-   
-  </a>
+    <a href="index.html"><h1 id="logo">Love Running</h1></a>
   </header>
 
   <!--Main content-->
