Add font awesome and first footer link

--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
   <main>Main Content</main>
    
   <!--Footer-->
-  <footer>Footer</footer>
-  
-
+  <footer>
+    <ul>
+      <li><a href="http://www.facebook.com/" target="_blank" rel="noopener" 
+      aria-label="Visit our Facebook page (open in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+    </ul>
+  </footer>
+  <!-- Font awesome kit -->
+  <script src="https://kit.fontawesome.com/5e4aba3606.js" crossorigin="anonymous"></script>
 </body>
 </html>
