--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <header>
     <a href="index.html"><h1 id="logo">Love Running</h1></a>
     <input type="checkbox" id="nav-toggle" name="nav-toggle">
-    <label for="nav-toggle" class="nav-toggle-label">x</label>
+    <label for="nav-toggle" class="nav-toggle-label">
+      <i class="fa-solid fa-bars"></i>
+    </label>
     <nav>
       <ul id="menu">
         <li><a href="" class="active">Home</a></li>
@@ -40,6 +42,12 @@
     <ul>
       <li><a href="http://www.facebook.com/" target="_blank" rel="noopener" 
       aria-label="Visit our Facebook page (open in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+      <li><a href="http://www.twitter.com/" target="_blank" rel="noopener" 
+      aria-label="Visit our Twitter page (open in a new tab)"><i class="fa-brands fa-square-twitter"></i></a></li>
+      <li><a href="http://www.youtube.com/" target="_blank" rel="noopener" 
+      aria-label="Visit our Youtube page (open in a new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
+      <li><a href="http://www.instagram.com/" target="_blank" rel="noopener" 
+        aria-label="Visit our Instagram page (open in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
     </ul>
   </footer>
   <!-- Font awesome kit -->
