--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    
   <!--Footer-->
   <footer>
-    <ul>
+    <ul id="social-networks">
       <li><a href="http://www.facebook.com/" target="_blank" rel="noopener" 
       aria-label="Visit our Facebook page (open in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
       <li><a href="http://www.twitter.com/" target="_blank" rel="noopener" 
