deploy and changed background color

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
   </header>
 
   <!--Main content-->
-  <main>Main Content</main>
+  <main>
+    <Section id="hero"></Section>
+  </main>
    
   <!--Footer-->
   <footer>
