--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
 
   <!--Main content-->
   <main>
-    <Section id="hero"></Section>
+    <Section id="hero">
+    <div id="cover-text">
+      <h2>Love Running</h2>
+      <h3>Dublin, docklands and Phoenix Park</h3>
+    </div>
+  </Section>
   </main>
    
   <!--Footer-->
