Removed some element

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section id="reasons">
     <h2>Why Love Running With Us?</h2>
     <div id="benefits"
-      <div id="benefits-physical">
+      <div id="benefigits-physical">
         <div>
           <h3>Feel healthy <i class="fa-solid fa-heart-pulse"></i></h3>
           <hr>
@@ -75,9 +75,7 @@
         <div id="benefits-image">
         <div id="circle-cover-bg"></div>
     </div>
-    </div>
     </section>
-  </section>
 
   <!-- Meetup Times section -->
   <section id="meetups">
